Fix broken links on page
doc: https://ben.balter.com/jekyll-style-guide/config/#baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-hacker
 title: Phantom of the Kill
 description: Story scripts of Phantom of the Kill (ファントム オブ キル)
+baseurl: /PotK-story-scripts
